--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Titulo do meu site</title>
         <meta charset="utf-8"/>
-        <link href="/danki-code/Projeto-formulario/style.css" type="text/css" rel="stylesheet"/>
+        <link href="./style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <form>
